--- a/poc-jax-rs/poc-jersey/pom.xml
+++ b/poc-jax-rs/poc-jersey/pom.xml
@@ -15,7 +15,19 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.sun.jersey.jersey-test-framework</groupId>
+			<artifactId>jersey-test-framework-inmemory</artifactId>
+			<version>1.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.jersey-test-framework</groupId>
 			<artifactId>jersey-test-framework-grizzly</artifactId>
+			<version>1.5</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.jersey-test-framework</groupId>
+			<artifactId>jersey-test-framework-embedded-glassfish</artifactId>
 			<version>1.5</version>
 			<scope>test</scope>
 		</dependency>
@@ -46,6 +58,12 @@
 					<groupId>org.codehaus.jettison</groupId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>3.0.5.RELEASE</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
