--- a/poc-jax-rs/poc-resteasy/pom.xml
+++ b/poc-jax-rs/poc-resteasy/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-spring</artifactId>
-			<version>1.2.GA</version>
+			<version>2.1.0.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jboss.resteasy</groupId>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
-			<version>1.2.GA</version>
+			<version>2.1.0.GA</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.codehaus.jackson</groupId>
@@ -76,7 +76,7 @@
 	<repositories>
 		<repository>
 			<id>jboss</id>
-			<url>http://repository.jboss.org/maven2</url>
+			<url>https://repository.jboss.org/nexus/content/groups/public-jboss</url>
 		</repository>
 	</repositories>
 </project>
