--- a/poc-jax-rs/poc-resteasy/pom.xml
+++ b/poc-jax-rs/poc-resteasy/pom.xml
@@ -61,9 +61,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>tjws</groupId>
-			<artifactId>webserver</artifactId>
-			<version>1.3.3</version>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>tjws</artifactId>
+			<version>2.1.0.GA</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
